Simplify condition that was always true and fix some warnings.